--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                                 <input type="color" id="bg-color" value="#ffffff">
                                 <button id="transparent-bg" class="mini-btn" title="Transparent Background">Clear</button>
                             </div>
+                            <div class="thickness-control">
+                                <label for="line-thickness">Thickness:</label>
+                                <input type="range" id="line-thickness" min="1" max="20" value="1" step="1">
+                                <span id="thickness-value">1px</span>
+                            </div>
                         </div>
                         <div class="tool-group">
                             <button id="clear-btn" class="action-btn">Clear Canvas</button>
