code -> drawing working

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             
             <div class="code-container">
                 <h3>Canvas Code:</h3>
-                <textarea id="code-output" readonly></textarea>
+                <textarea id="code-output"></textarea>
                 <button id="copy-btn" class="action-btn">Copy Code</button>
             </div>
         </div>
