add no fill checkbox

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                             <div class="color-picker">
                                 <label for="fill-color">Fill:</label>
                                 <input type="color" id="fill-color" value="#ffffff">
+                                <input type="checkbox" id="no-fill-checkbox" title="Disable fill color">
+                                <label for="no-fill-checkbox" class="checkbox-label">No Fill</label>
                             </div>
                             <div class="color-picker">
                                 <label for="bg-color">Background:</label>
