semi-working arc

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                             <button id="rect-btn" class="tool-btn active" data-shape="rectangle">Rectangle</button>
                             <button id="circle-btn" class="tool-btn" data-shape="circle">Circle</button>
                             <button id="line-btn" class="tool-btn" data-shape="line">Line</button>
+                            <button id="arc-btn" class="tool-btn" data-shape="arc">Arc</button>
                         </div>
                         <div class="tool-group">
                             <div class="color-picker">
